k8s/certificacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificacion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: certificacion
  template:
    metadata:
      labels:
        app: certificacion
    spec:
      containers:
        - name: certificacion
          image: mercado_agricola-certificacion:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: certificacion
  labels:
    app: certificacion
spec:
  type: LoadBalancer
  selector:
    app: certificacion
  ports:
    - port: 8008
      targetPort: 8008
