k8s/db-productos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-productos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-productos
  template:
    metadata:
      labels:
        app: db-productos
    spec:
      containers:
        - name: db-productos
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: datos
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: datos
          persistentVolumeClaim:
            claimName: db-productos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-productos
spec:
  selector:
    app: db-productos
  ports:
    - port: 5432
      targetPort: 5432
