k8s/notificaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
        - name: notificaciones
          image: localhost:5000/notificaciones:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: notificaciones
spec:
  type: LoadBalancer
  selector:
    app: notificaciones
  ports:
    - port: 8005
      targetPort: 8005
