k8s/pagos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pagos
  template:
    metadata:
      labels:
        app: pagos
    spec:
      containers:
        - name: pagos
          image: mercado_agricola-pagos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: pagos
  labels:
    app: pagos
spec:
  type: LoadBalancer
  selector:
    app: pagos
  ports:
    - port: 8007
      targetPort: 8007
