k8s/pedidos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
        - name: pedidos
          image: mercado_agricola-pedidos:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos
spec:
  type: LoadBalancer
  selector:
    app: pedidos
  ports:
    - port: 8003
      targetPort: 8003
