k8s/productores.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productores
spec:
  replicas: 3
  selector:
    matchLabels:
      app: productores
  template:
    metadata:
      labels:
        app: productores
    spec:
      containers:
        - name: productores
          image: localhost:5000/productores:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: productores
spec:
  type: LoadBalancer
  selector:
    app: productores
  ports:
    - port: 8001
      targetPort: 8001
