k8s/productos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: productos
  template:
    metadata:
      labels:
        app: productos
    spec:
      containers:
        - name: productos
          image: mercado_agricola-productos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: productos
spec:
  type: LoadBalancer
  selector:
    app: productos
  ports:
    - port: 8002
      targetPort: 8002
