k8s/transporte.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transporte
spec:
  replicas: 3
  selector:
    matchLabels:
      app: transporte
  template:
    metadata:
      labels:
        app: transporte
    spec:
      containers:
        - name: transporte
          image: mercado_agricola-transporte:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: transporte
spec:
  type: LoadBalancer
  selector:
    app: transporte
  ports:
    - port: 8004
      targetPort: 8004
