k8s/usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
spec:
  replicas: 3
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: mercado_agricola-usuarios:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios
spec:
  type: LoadBalancer
  selector:
    app: usuarios
  ports:
    - port: 8006
      targetPort: 8006
